# ems-test-fw

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.orig  Kconfig  README.md  VERSION  cell_comm_demo.conf  debug.conf  hw_test.conf  pm_static.yml  prj.conf  prj.conf.orig  version.h.in  version.sh.in  west.yml
child_image/mcuboot/: prj.conf
ci/deploy/: install_firmware.sh
cmake/: version.cmake
docker/x3-ci/: Dockerfile
docs/src/: x3-arch-overview.drawio
include/: nf_common.h  nf_eeprom.h
include/drivers/: gnss.h
modem_driver/: ublox-sara-r4.c
scripts/: diag.py  list_collars_ble.py  test_diag_cmd.py
scripts/factory/: factory_test.py  factory_test_ble.py
scripts/gnss/: README.md  gnss_recorder.py  m10sim.py
scripts/nfdiag/: README.md  __init__.py  commander.py  stream.py
src/: main.c  main_cell_comm_demo.c  main_hardware_test.c
src/ble/: beacon.h  beacon_processor.c  beacon_processor.h  nf_ble.c  nf_ble.h
src/cellular_communicator_demo/: common.h  tcp.c  udp.c
src/eeprom/: CMakeLists.txt  eeprom.c  nf_eeprom_private.h
src/events/: CMakeLists.txt  Kconfig  config_event.c  config_event.h  storage_event.c  storage_event.h  storate_event.h  test_event.c  test_event.h
tests-hw/nofence-tester/: README.md  report.py  runner.py
tests/amc/: CMakeLists.txt  Kconfig  README.md  prj.conf  testcase.yaml
tests/amc/mock/: movement_controller.c  movement_controller.h  nf_settings.c  nf_settings.h  stg_config.c  stg_config.h  storage.c  storage.h  watchdog_app.h
tests/amc/src/: amc_collar_fence_test.c  amc_correction_test.c  amc_dist_test.c  amc_gnss_test.c  amc_test.c  amc_test_common.h  amc_zone_test.c  messaging_test.c
tests/ble/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/ble/mock/: bt.c  bt.h  eeprom.c  eeprom.h  nf_settings.c  nf_settings.h
tests/ble/src/: beacon_processor_test.c  beacon_processor_test.h  bluetooth.c
tests/buzzer/: CMakeLists.txt  Kconfig  README.md  prj.conf  testcase.yaml
tests/cellular_controller/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/cellular_controller/boards/: native_posix.overlay
tests/cellular_controller/mock/: mock_cellular_helpers.c  mock_cellular_helpers.h  mock_modem_nf.c  selftest.c  selftest.h  stg_config.c  stg_config.h
tests/cellular_controller/src/: cellular_controller_test.c
tests/collar_protocol/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
tests/collar_protocol/src/: collar_protocol_test.c
tests/drivers/modem/: CMakeLists.txt  prj.conf
tests/drivers/modem/boards/: native_posix.overlay
tests/drivers/modem/dts/bindings/serial/: nofence,dummy-uart.yaml
tests/drivers/modem/src/: modem_test.c
tests/eeprom/: CMakeLists.txt  prj.conf  testcase.yaml
tests/eeprom/src/: eeprom_test.c
tests/electric_pulse/: CMakeLists.txt  Kconfig  README.md  prj.conf  testcase.yaml
tests/electric_pulse/boards/: native_posix.overlay
tests/electric_pulse/mock/: nf_settings.c  nf_settings.h  stg_config.c  stg_config.h  watchdog_app.c
tests/electric_pulse/mock/drivers/: pwm.c  pwm.h
tests/electric_pulse/src/: electric_pulse_test.c
tests/environment/: CMakeLists.txt  Kconfig  README.md  prj.conf  testcase.yaml
tests/error_handler/: CMakeLists.txt  Kconfig  README.md  prj.conf  testcase.yaml
tests/error_handler/mock/: date_time.h  nf_settings.h  stg_config.c  storage.c  storage.h
tests/error_handler/src/: error_handler_test.c
tests/event_manager/: CMakeLists.txt  README.md  prj.conf  readme.md  testcase.yaml
tests/event_manager/src/: event_manager_test.c  main.c
tests/event_manager/src/events/: data_event.c  multicontext_event.c  order_event.c  req_event.c  req_event.h  sensor_event.c  sensor_event.h  test_events.c
tests/event_manager/src/modules/: listener.c  listener.h  publisher.c  publisher.h  test_basic.c  test_config.h  test_data.c  test_multicontext.c  test_multicontext_handler.c  test_oom.c  test_subs.c
tests/event_manager/test/: event_manager_test.c
tests/firmware_upgrade/: CMakeLists.txt  Kconfig  README.md  prj.conf  testcase.yaml
tests/firmware_upgrade/mock/: dfu_target.c  dfu_target.h
tests/firmware_upgrade/mock/net/: fota_download.c  fota_download.h
tests/firmware_upgrade/src/: firmware_upgrade_test.c
tests/gnss_controller/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/gnss_controller/boards/: native_posix.overlay
tests/gnss_controller/dts/bindings/gnss/: nofence,mock-gnss.yaml
tests/gnss_controller/mock/: mock_gnss.c  mock_gnss.h  watchdog_app.c
tests/gnss_controller/mock/zephyr/: CMakeLists.txt  Kconfig  mock_gnss.c  mock_gnss.h
tests/gnss_controller/src/: cellular_controller_test.c  gnss_controller_test.c
tests/messaging/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/messaging/mock/: amc_cache.c  amc_cache.h  amc_correction.c  amc_correction.h  date_time.c  date_time.h  eeprom.c  eeprom.h  http_downloader.c  mock_ublox-sara-r4_nf.c  nf_crc16.c  nf_crc16.h  nf_eeprom.h  nf_settings.c  nf_settings.h  nf_version.h  stg_config.c  stg_config.h  storage.c  storage.h
tests/messaging/src/: messaging_test.c
tests/movement_controller/: CMakeLists.txt  Kconfig  README.md  prj.conf  testcase.yaml
tests/movement_controller/mock/: nf_settings.c  nf_settings.h  stg_config.c  stg_config.h
tests/movement_controller/mock/drivers/: acc_dataset.h  sensor.c  sensor.h
tests/movement_controller/src/: movement_tests.c
tests/power_manager/: CMakeLists.txt  Kconfig  README.md  prj.conf  testcase.yaml
tests/power_manager/boards/: native_posix.overlay
tests/power_manager/mock/: nf_settings.c  nf_settings.h  stg_config.c  watchdog_app.h
tests/power_manager/src/: power_manager_test.c
tests/storage_controller/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/storage_controller/boards/: native_posix.overlay
tests/storage_controller/mock/: date_time.c  pm_config.h
tests/storage_controller/src/: main.c  stg_config_test.c  storage_helper.c  storage_helper.h  storage_test.c  storage_test_ano.c  storage_test_log.c  storage_test_pasture.c  storage_test_system_diag.c
(+295 files in other folders)
